@@ -1,3 +1,7 @@
+2003-04-25  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>
+
+	* XmlWriterTests.cs : added some WriteNode() related testcases.
+
 2003-04-13  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>
 
 	* XmlTextReaderTests.cs: quick fix to comment out TestExternalDocument.
